# noita-winstreak-updater

./: README.md  biome.json  index.html  package-lock.json  package.json
src/: const.ts  crypto.ts  file.ts  interfaces.ts  main.ts  main.ts.back  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  memory.rs  target_address.rs
src/events/: end-watching-button.ts  out-file-select-button.ts  start-watching-button.ts
src/interfaces/: monitor-status.ts  start-button-params.ts
