[package]
name = "noita-winstreak-updater"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sysinfo = "0.30"
winapi = { version = "0.3", features = ["handleapi", "memoryapi", "processthreadsapi", "tlhelp32", "winnt", "psapi"] }
serde_json = "1"
tera = "1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
regex = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
